Imagenes y texto actualizados

--- a/languages/es.json
+++ b/languages/es.json
@@ -19,10 +19,10 @@
         "title": "Proyectos",
         "games": "Programación de Videojuegos",
         "music": "Composición Musical para Videojuegos",
-        "websites": "Paginas Web",
+        "websites": "Desarrollo de Páginas Web",
         "videogames": "Videojuego",
         "video": "Ver Video...",
-        "webpage": "Página Web",
+        "webpage": "E-Commerce",
         "page": "Visitar Página..."
     },
 
