--- a/languages/en.json
+++ b/languages/en.json
@@ -19,10 +19,10 @@
         "title": "Projects",
         "games": "Videogame Programming",
         "music": "Music Composition for Videogames",
-        "websites": "Websites",
+        "websites": "Websites Development",
         "videogames": "Videogame",
         "video": "Watch Video...",
-        "webpage": "Webpage",
+        "webpage": "E-Commerce",
         "page": "Visit Page..."
     },
 
