--- a/languages/en.json
+++ b/languages/en.json
@@ -23,6 +23,7 @@
         "videogames": "Videogame",
         "video": "Watch Video...",
         "webpage": "E-Commerce",
+        "portfolio": "Portfolio",
         "page": "Visit Page..."
     },
 
