--- a/languages/es.json
+++ b/languages/es.json
@@ -23,6 +23,7 @@
         "videogames": "Videojuego",
         "video": "Ver Video...",
         "webpage": "E-Commerce",
+        "portfolio": "Portfolio",
         "page": "Visitar Página..."
     },
 
